[package]
name = "utime"
version = "0.2.0"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
homepage = "https://github.com/simnalamburt/utime"
repository = "https://github.com/simnalamburt/utime"
documentation = "https://simnalamburt.github.com/utime/"
license = "Apache-2.0 OR MIT"
keywords = ["utime", "mtime"]
readme = "README.md"

description = """
A missing utime function for Rust.
"""

[dependencies]
libc = "0.2"
winapi = "0.2"
kernel32-sys = "0.2"
