[package]
name = "utime"
version = "0.2.2"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

description = """
A missing utime function for Rust.
"""

documentation = "https://docs.rs/utime/"
readme = "README.md"
homepage = "https://github.com/simnalamburt/utime"
repository = "https://github.com/simnalamburt/utime"
license = "Apache-2.0 OR MIT"
keywords = ["utime", "mtime"]

[dependencies]
libc = "0.2"
winapi = "0.2"
kernel32-sys = "0.2"

[badges]
maintenance = { status = "passively-maintained" }
