[package]
name = "utime"
version = "0.3.1"
authors = ["Hyeon Kim <simnalamburt@gmail.com>"]
edition = "2018"

description = """
A missing utime function for Rust.
"""

documentation = "https://docs.rs/utime/"
readme = "README.md"
homepage = "https://github.com/simnalamburt/utime"
repository = "https://github.com/simnalamburt/utime"
license = "Apache-2.0 OR MIT"
keywords = ["utime", "mtime"]

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "minwindef", "winbase"] }

[badges]
maintenance = { status = "passively-maintained" }
